* pa_device-edit | introduce actions=exportInventoryToExcel / exportLicenseToExcport devicetype=manageddevice
* pa_rule-edit | actions=display:resolveServiceSummary shadow-json - if service is.application-default and app is.any => do service resolve to default app protocol port
* pa_rule-stats | optimised if arguments "cycleconnectedfirewalls" to display FW model

BUGFIX:
*  all utils script - bugfix if Panorama config is used with loadpanoramapushedconfig
* pa_rule-edit - bugfix for actions=display:resolveservicesummary - if service is.application-default and app has application.filter
* pa_address-merger | bugfix if for DG duplicate value is available on childDG and parentDG [thanks to Necip Cebeci ]

GENERAL:
* class PanAPIConnecotor - extend with methods loadPanoramaPushedConfig() / panorama_getAllFirewallsSerials()


2.0.22 (20211112)
UTILS:
* pa_rule-edit - get back actions=user-add:USER / user-remove:USER / user-set-any for PAN-OS API mode
* pa_rule-edit | introduce actions=user-check-ldap:show,LDAPuser,LDAPserver,OU=XYZ;DC=domain;DC=local,OUfilter
* pa_rule-edit | actions=user-check-ldap - extend to check if user is existent in a specific LDAP group e.g. disabled
* pa_rule-edit | actions=user-check-ldap - extend help
* pa_rule-edit - enhancement for actions=from-/to-calculate-zones - if template is set to api@SERIAL - now full routing table incl. dynamic routing is used for zone calculation
* class UTIL - extend method locationNotFound for JSON response

BUGFIX:
* pa_upload-config in=api://MGMT-IP/merged-config - bringing this feature back to specify to download running-/merged-/candidate-config
* framework class ObjStore - bugfix - extend validation about existing variable setting
* framework class RuleStore | bugfix for Fawkes Container / DeviceCloud
* framework class PanAPIConnector - bugfix if PAN-OS API mode and API key is not available in combination with argument shadow-json